navbar issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -335,7 +335,7 @@ before this i was having problems with the anchor adding padding and a negative 
   }
   /* navbar styles */
   .nav-container {
-    margin-top: -23px;
+    margin-top: -24px;
   }
   .title {
     font-size: 1rem;
